# FastAPI-Base-Project

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: router.py
app/api/v1/: router.py
app/resources/: .env.example  logging.conf
app/utils/: env.py
